[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Fonts/Collection/CardAccordionItemTitleFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Fonts/Collection/CardAccordionItemValueFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://GameObjects/Panels/MainMenu/CollectionPanel/MainCollectionPanel/DeckItem/DeckItem.gd" type="Script" id=3]

[node name="DeckItem" type="Button"]
margin_right = 400.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 400.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
mouse_filter = 2
color = Color( 0.533333, 0.796078, 0.505882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckName" type="Label" parent="."]
margin_top = 15.0
margin_right = 400.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 1 )
text = "Deck Name"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckDescription" type="Label" parent="."]
margin_top = 65.0
margin_right = 400.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 2 )
text = "This is a generic deck description."
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="." to="." method="on_click"]
